--- a/Bases_de_datos/Cuadernos/PyMongo.ipynb
+++ b/Bases_de_datos/Cuadernos/PyMongo.ipynb
@@ -5,7 +5,7 @@
    "id": "4693428f-41e9-412f-b7c9-31713ba46c35",
    "metadata": {},
    "source": [
-    "# PyMongo"
+    "# <span style=\"color:#F72585\"><center>PyMongo</center></span></center></span>"
    ]
   },
   {
@@ -13,7 +13,15 @@
    "id": "7e767448-b9bd-4ee3-bf5d-b83749ebf6ba",
    "metadata": {},
    "source": [
-    "## Instalar librería de PyMongo."
+    "## <span style=\"color:#4361EE\">Instalar librería de PyMongo</span> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfe5f358-cc7e-4aff-9209-f95afb4c806b",
+   "metadata": {},
+   "source": [
+    "Para conexión local."
    ]
   },
   {
@@ -21,17 +29,35 @@
    "id": "32b38e5f-170a-4b87-a275-c1b14f8012c8",
    "metadata": {},
    "source": [
-    "```powershell\n",
+    ">```powershell\n",
+    " conda install -c anaconda pymongo \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41f2c1a6-b194-44ab-9a0b-ebaa5181578d",
+   "metadata": {},
+   "source": [
+    "Para conexión remota."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c303f76a-0c8c-4bfd-8caf-2056068dc2aa",
+   "metadata": {},
+   "source": [
+    ">```powershell\n",
     "conda install -c anaconda pymongo[srv]\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db83cbfe-2fcf-4f83-86fc-a1fd63a45509",
+   "id": "adabaf20-da5b-4ea5-816f-7b1baf2e851e",
    "metadata": {},
    "source": [
-    "## Conexión a la base de datos"
+    "## <span style=\"color:#4361EE\">Conexión a la base de datos</span> "
    ]
   },
   {
@@ -62,6 +88,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2efe7d06-c0d9-4f27-a67a-ceb6ce5bf7b7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### <span style=\"color:#4CC9F0\">Local</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fe59cf65-e0b9-4396-85b8-47611d79c084",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cliente = MongoClient()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48cf8f46-830c-476d-8197-36b33d84709e",
    "metadata": {},
    "source": [
@@ -70,6 +116,16 @@
     "* port (opcional): número de puerto en el que conectarse.\n",
     "* username (opcional): usuario.\n",
     "* password: (opcional): Conttaseña."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6b9f66-2cc6-4f9c-970f-49d5b001d8e5",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### <span style=\"color:#4CC9F0\">Remota</span>"
    ]
   },
   {
@@ -99,57 +155,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a2224598-2fff-4f30-95b3-4f7efc3c752d",
+   "cell_type": "markdown",
+   "id": "40086e77-0ea5-4e1e-abf1-b07f2f80c35f",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
+    "# Traemos la clave\n",
     "with open('key.txt') as file:\n",
-    "    uri = file.read().splitlines()[0]"
+    "    uri = file.read().splitlines()[0]\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "2987eaaa-5175-4ddc-8561-26962d7ac9fa",
+   "cell_type": "markdown",
+   "id": "954de877-e358-44f9-a1e5-84ce4bd3ea01",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conexión exitosa\n"
-     ]
-    }
-   ],
    "source": [
-    "# establecer un tiempo de espera de conexión de 5 segundos\n",
+    "```python\n",
+    "# Probamos que la conexión haya sido exitosa\n",
+    "# Establecer un tiempo de espera de conexión de 5 segundos\n",
+    "\n",
     "cliente = MongoClient(uri)\n",
     "\n",
     "try:\n",
     "    cliente.admin.command('ismaster')\n",
     "    print(\"Conexión exitosa\")\n",
     "except Exception:\n",
-    "    print(\"No se pudo conectar el servidor\")"
+    "    print(\"No se pudo conectar el servidor\")\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bf34c8b5-26eb-4424-9491-0e2de385f67b",
+   "id": "a8c64575-d7fc-4aad-a76a-17882f33d3fc",
    "metadata": {},
    "source": [
-    "## Crear bases de datos"
+    "## <span style=\"color:#4361EE\">Crear bases de datos</span> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "9b083696-4f5f-46c9-aa0b-f7b62bca3125",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = cliente['db_1']"
+    "db = cliente['db_2']"
    ]
   },
   {
@@ -162,25 +213,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7153f44-7e8b-4fdc-9e60-47fe57bebcfb",
+   "id": "ca3a9a17-65b7-40f8-a187-0c0b30dc368a",
    "metadata": {},
    "source": [
-    "## Ver bases de datos"
+    "## <span style=\"color:#4361EE\">Ver bases de datos</span> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "7accdfd5-0fa4-4d78-a2d2-63c28bd54634",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['db_1', 'admin', 'local']"
+       "['Base', 'admin', 'config', 'db_1', 'local']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,15 +252,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c6e27e-94de-4a37-8b3f-817489dff7e0",
+   "id": "b2a7a73c-1f64-457a-81cb-70afcd8d1334",
    "metadata": {},
    "source": [
-    "## Crear colecciones"
+    "## <span style=\"color:#4361EE\">Crear colecciones</span> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "9b5e248d-61c0-457a-8330-974b056897fc",
    "metadata": {},
    "outputs": [],
@@ -227,25 +278,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c1255fa-29a7-440b-b9bc-2d0f6399a274",
+   "id": "37541801-4049-4eb9-936a-dcac9d75aa5e",
    "metadata": {},
    "source": [
-    "## Ver colecciones"
+    "## <span style=\"color:#4361EE\">Ver colecciones</span> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "2db8ea2b-c98b-49b4-8e06-8ff4a55e352b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['coleccion_1']"
+       "[]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,57 +307,87 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca08224f-f4d3-4402-9037-ff7b139fa037",
+   "id": "8718cf54-4cbf-454d-a68e-c9389250fc66",
    "metadata": {},
    "source": [
-    "## Insertar documetos"
+    "## <span style=\"color:#4361EE\">Insertar documetos</span> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "99dc13b1-9abf-4802-8635-11ccf7dfa4a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7f4bcae98700>"
+       "<pymongo.results.InsertOneResult at 0x7fc2307e9d00>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "col.insert_one({\n",
-    "    'nombre' : 'José Pérez',\n",
-    "    'edad' : 20,\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c19c71d2-380b-42aa-9f61-3e5cb5fd43a6",
-   "metadata": {},
-   "source": [
-    "## Contar documentos"
+    "# Insertar un solo documento\n",
+    "\n",
+    "dato = {'nombre' : 'José Pérez',\n",
+    "        'edad' : 20,\n",
+    "        'profesion' : 'arquitecto'}\n",
+    "\n",
+    "col.insert_one(dato)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
+   "id": "0724e758-ae2a-4bab-ab6d-7a01f24c9360",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7fc2428f37c0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inserar multiples datos\n",
+    "\n",
+    "lista = [{\"nombre\": \"Andrea Sanchez\", \"edad\": 30, \"profesion\": \"deportista\"},\n",
+    "         {\"nombre\": \"Luis Vargas\", \"edad\": 36, \"profesion\": \"enfermero\"},\n",
+    "        {\"nombre\": \"Marcela Aranda\", \"edad\": 35, \"profesion\": \"estudiante\"}]\n",
+    "\n",
+    "col.insert_many(lista)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f137e3d-2848-4bc8-a8bc-fcc10d635fa6",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#4361EE\">Contar documentos</span> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "dc24d507-f69b-42b6-bca1-add78ff05c65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,22 +401,61 @@
    "id": "c517498b-94d8-424b-b0de-f8f165364095",
    "metadata": {},
    "source": [
-    "## Busquedas"
+    "## <span style=\"color:#4361EE\">Búsquedas</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af37a19-107c-4e69-a62c-277b9ccc000d",
+   "metadata": {},
+   "source": [
+    "Búsqueda de un solo documento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "00c4928c-e8d7-4d37-b7ea-aff6832f457d",
+   "execution_count": 57,
+   "id": "aa7d91cd-7050-4799-ac29-d0971bff991d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.cursor.Cursor at 0x7f4beeb2a3e0>"
+       "{'_id': ObjectId('63d195a33eb3ce7e74439616'),\n",
+       " 'nombre': 'José Pérez',\n",
+       " 'edad': 20}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col.find_one({})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c8da5e9-f4b4-43c9-a36f-26a3335a3c37",
+   "metadata": {},
+   "source": [
+    "Búsqueda de múltiples documentos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fe704c24-3652-4522-b1fc-c0c6fc64a8eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.cursor.Cursor at 0x7f57c935f310>"
+      ]
+     },
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,49 +465,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a84674d-62e4-4aa5-bbc8-94ef9b369ea3",
+   "metadata": {},
+   "source": [
+    "Este nos genererá un objeto tipo 'Cursor' por lo cual deberemos iterarlo para poder visualizarlo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "00c4928c-e8d7-4d37-b7ea-aff6832f457d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63d19ba2012a78e817cc71a5'), 'nombre': 'Luis Vargas', 'edad': 36, 'profesion': 'enfermero'}\n",
+      "{'_id': ObjectId('63d19ba2012a78e817cc71a6'), 'nombre': 'Marcela Aranda', 'edad': 35, 'profesion': 'estudiante'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = {'edad':{'$gt': 30}}\n",
+    "\n",
+    "for documento in col.find(query):\n",
+    "    print(documento)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "962897a1-3395-4345-9d0e-dddffd698d28",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'col' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m documento \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcol\u001b[49m\u001b[38;5;241m.\u001b[39mfind({}):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(documento)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'col' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63d195a33eb3ce7e74439616'), 'nombre': 'José Pérez', 'edad': 20}\n",
+      "{'_id': ObjectId('63d1969e3eb3ce7e74439617'), 'nombre': 'José Pérez', 'edad': 20}\n",
+      "{'_id': ObjectId('63d196f13eb3ce7e74439618'), 'nombre': 'José Pérez', 'edad': 20}\n",
+      "{'_id': ObjectId('63d197063eb3ce7e74439619'), 'nombre': 'José Pérez', 'edad': 20}\n",
+      "{'_id': ObjectId('63d1973c3eb3ce7e7443961a'), 'nombre': 'José Pérez', 'edad': 20, 'profesion': 'arquitecto'}\n",
+      "{'_id': ObjectId('63d197ca3eb3ce7e7443961b'), 'nombre': 'Andrea Sanchez', 'edad': 30, 'profesion': 'deportista'}\n",
+      "{'_id': ObjectId('63d197ca3eb3ce7e7443961c'), 'nombre': 'Luis Vargas', 'edad': 36, 'profesion': 'enfermero'}\n",
+      "{'_id': ObjectId('63d197ca3eb3ce7e7443961d'), 'nombre': 'Marcela Aranda', 'edad': 35, 'profesion': 'estudiante'}\n"
      ]
     }
    ],
    "source": [
     "for documento in col.find({}):\n",
     "    print(documento)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "aa7d91cd-7050-4799-ac29-d0971bff991d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('635afae0698079291d2fb644'),\n",
-       " 'nombre': 'José Pérez',\n",
-       " 'edad': 20}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "col.find_one({})"
    ]
   },
   {
@@ -415,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
