--- a/Bases_de_datos/Cuadernos/intro_mongodb.ipynb
+++ b/Bases_de_datos/Cuadernos/intro_mongodb.ipynb
@@ -110,23 +110,15 @@
    "id": "82c07ce9-cd02-477a-8115-4d1818134458",
    "metadata": {},
    "source": [
-    "## Estructura JSON y Diccionarios de Python"
+    "## <span style=\"color:#4361EE\">Estructura JSON y Diccionarios de Python</span> "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a3e6fa3-015f-49d2-8b69-b6c59d566836",
+   "id": "1e1d9019-d02c-44f8-aefb-90d235239c07",
    "metadata": {},
    "source": [
-    "- Ver la conversión"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "173c1b8b-2c25-4512-9ac3-1e093c5c2da0",
-   "metadata": {},
-   "source": [
-    "#### Ejemplo:"
+    "### <span style=\"color:#4CC9F0\">Ejemplo estructura JSON</span>"
    ]
   },
   {
@@ -164,10 +156,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bb4c54-9358-42ba-9e07-056f8a5d354c",
+   "id": "97beafbe-6de7-460c-852a-7024fd6d4191",
    "metadata": {},
    "source": [
-    "#### **Atributos anidados**"
+    "### <span style=\"color:#4CC9F0\">Atributos anidados</span>"
    ]
   },
   {
@@ -194,6 +186,66 @@
     "    'address': { 'zip': 1013, 'country': 'Colombia'}\n",
     "};\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a806ea5-9bba-48c4-b50b-9a7868f0445b",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:#4CC9F0\">De JSON a diccionarios en Python</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c823446b-aadb-4aff-bd42-aff6bf8edc7a",
+   "metadata": {},
+   "source": [
+    "Para convertir datos *JSON* a diccionarios podemos utilizar el siguiente código."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ae51386a-c8c1-4001-bd81-f1bcb26ef7e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tamano': 'mediana',\n",
+       " 'precio': 15.67,\n",
+       " 'toppings': ['champinones', 'queso extra', 'pepperoni', 'albahaca'],\n",
+       " 'cliente': {'nombre': 'Jane Doe',\n",
+       "  'telefono': '455-344-234',\n",
+       "  'correo': 'janedoe@email.com'}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Importar el módulo\n",
+    "import json\n",
+    "\n",
+    "# Cadena de caracteres en el formato JSON\n",
+    "datos_JSON =  \"\"\"\n",
+    "{\n",
+    "    \"tamano\": \"mediana\",\n",
+    "    \"precio\": 15.67,\n",
+    "    \"toppings\": [\"champinones\", \"queso extra\", \"pepperoni\", \"albahaca\"],\n",
+    "    \"cliente\": {\n",
+    "        \"nombre\": \"Jane Doe\",\n",
+    "        \"telefono\": \"455-344-234\",\n",
+    "        \"correo\": \"janedoe@email.com\"}\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "# Convertir cadena de caracteres JSON a un diccionario\n",
+    "\n",
+    "json.loads(datos_JSON)"
    ]
   },
   {
@@ -280,7 +332,6 @@
     "    - Array\n",
     "    - Binary\n",
     "    - Boolean\n",
-    "    - Code\n",
     "    - Date\n",
     "    - Decimal128\n",
     "    - Double\n",
@@ -291,9 +342,7 @@
     "    - Null\n",
     "    - Object\n",
     "    - ObjectId\n",
-    "    - BSONRegExp\n",
     "    - string\n",
-    "    - BSONSymbol\n",
     "    - Timestamp"
    ]
   },
@@ -369,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
