--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -59,7 +59,7 @@
    "id": "a5f0abd1-36b6-4b8a-b186-ce5b6cad51be",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input:\n",
     "\n",
     "> mongod\n",
@@ -2852,7 +2852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
