--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -172,7 +172,7 @@
    "id": "428850a0-83d4-447e-a949-fea72008108c",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input:\n",
     "\n",
     "> mongosh \"mongodb+srv://cluster0.fjwqcec.mongodb.net/myFirstDatabase\" --apiVersion 1 --username user_1\n",
@@ -222,17 +222,9 @@
    "id": "3a45587c-9aed-4b9e-abf3-281336599c4b",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "mongoimport --db <base de datos> --collection <colección> --legacy <ruta del archivo .json>\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "addd0104-0255-4d32-832a-82be30655d10",
-   "metadata": {},
-   "source": [
-    "**Pendiente completar**"
    ]
   },
   {
@@ -314,7 +306,7 @@
    "id": "00884b50-3770-4c5b-9167-91f6f8c8b708",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input:\n",
     "\n",
     "> db;\n",
@@ -348,7 +340,7 @@
    "id": "5d99dca0-c5c7-4578-bc86-b98a31bebcd8",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input:\n",
     "\n",
     "> use banco;\n",
@@ -390,7 +382,7 @@
    "id": "6f051f08-7156-459f-8019-d8fe8844e67a",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input:\n",
     "\n",
     "> pregunta_1 = {\n",
