--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Consola_MongoDB/consola_mongodb1.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Bases_de_datos/Imagenes/Consola_MongoDB/consola_mongodb1.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -122,7 +122,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Consola_MongoDB/consola_mongodb2.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Bases_de_datos/Imagenes/Consola_MongoDB/consola_mongodb2.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -149,7 +149,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Consola_MongoDB/consola_mongodb3.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Bases_de_datos/Imagenes/Consola_MongoDB/consola_mongodb3.png\" width=\"900\" height=\"800\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -476,7 +476,7 @@
    "id": "74f93681-4376-4791-b3e0-3e4abe11a7da",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input: \n",
     "\n",
     "> db.preguntas.insertOne(pregunta_1);\n",
@@ -553,7 +553,7 @@
    "id": "7838bd7f-1d27-43f3-87a2-fffd5b268f36",
    "metadata": {},
    "source": [
-    "```json\n",
+    "```powershell\n",
     "Input: \n",
     "\n",
     "> db.preguntas.insertMany([\n",
@@ -2719,30 +2719,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f60c76a-85d0-42c2-b81e-debe30527edd",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## <span style=\"color:#4361EE\">Indices</span> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1df388db-efa0-40ba-b07e-a31d9a4ad331",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## <span style=\"color:#4361EE\">Modelamiento de datos</span> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c4b0c65c-f832-4f6b-911f-725024cb2cf7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2751,72 +2729,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194a054b-af4a-467e-81ac-4bf236768610",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## <span style=\"color:#4361EE\">Añadir campos con condicionales</span> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9833116e-7e94-4a4f-928a-44b8e43adccd",
-   "metadata": {},
-   "source": [
-    "Con este método se puede añadir o modificar valores de manera que se puedan añadir a todos los documentos que cumplan las condiciones."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14174b60-82ec-4551-a1fb-179eb9571a82",
-   "metadata": {},
-   "source": [
-    "```powershell\n",
-    "\n",
-    "db.collection.updateOne(\n",
-    "    {\n",
-    "    'sensor': r.sensor,\n",
-    "    'date': r.date.\n",
-    "    'valcount': {$lt: 48}\n",
-    "    },\n",
-    "    {\n",
-    "    $push: \n",
-    "        {\n",
-    "        'readings': \n",
-    "            { \n",
-    "            'v': r.value, 't': r.time\n",
-    "            }\n",
-    "        },\n",
-    "    $inc:\n",
-    "        {\n",
-    "        'valcount':1,\n",
-    "        'total':r.value\n",
-    "        }\n",
-    "    }   \n",
-    "    {\n",
-    "    $upsert: true\n",
-    "    }\n",
-    ")\n",
-    "    \n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86664026-ddfa-44f5-9bc6-4a4f4513c119",
-   "metadata": {},
-   "source": [
-    "```powershell\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5c68e654-65a9-4f25-8967-8632b772afae",
    "metadata": {},
    "source": [
-    "## Referencias"
+    "## <span style=\"color:#4361EE\">Referencias</span>"
    ]
   },
   {
