--- a/Bases_de_datos/Cuadernos/PyMongo.ipynb
+++ b/Bases_de_datos/Cuadernos/PyMongo.ipynb
@@ -97,14 +97,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e1f991a4-7dfc-48be-9978-5d6cda946489",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4cee9d93-c947-4ce5-af32-1dc94cbad05b",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```python\n",
-    "\n",
-    "Cliente = MongoClient()\n",
-    "```"
+    "cliente = MongoClient()"
    ]
   },
   {
@@ -196,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "9b083696-4f5f-46c9-aa0b-f7b62bca3125",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = cliente['db_2']"
+    "db = cliente['db_prueba']"
    ]
   },
   {
@@ -222,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "7accdfd5-0fa4-4d78-a2d2-63c28bd54634",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Base', 'admin', 'config', 'db_1', 'local']"
+       "['Base', 'admin', 'config', 'db_1', 'db_2', 'db_3', 'local', 'test']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "9b5e248d-61c0-457a-8330-974b056897fc",
    "metadata": {},
    "outputs": [],
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "2db8ea2b-c98b-49b4-8e06-8ff4a55e352b",
    "metadata": {},
    "outputs": [
@@ -297,7 +296,7 @@
        "[]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,17 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "99dc13b1-9abf-4802-8635-11ccf7dfa4a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7fc2307e9d00>"
+       "<pymongo.results.InsertOneResult at 0x7f9d4fcf7800>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,17 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "0724e758-ae2a-4bab-ab6d-7a01f24c9360",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fc2428f37c0>"
+       "<pymongo.results.InsertManyResult at 0x7f9d4fcf6440>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "dc24d507-f69b-42b6-bca1-add78ff05c65",
    "metadata": {},
    "outputs": [
@@ -388,7 +387,7 @@
        "4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,19 +414,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "aa7d91cd-7050-4799-ac29-d0971bff991d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('63d195a33eb3ce7e74439616'),\n",
+       "{'_id': ObjectId('63d7dc501c11a75df15ed531'),\n",
        " 'nombre': 'José Pérez',\n",
-       " 'edad': 20}"
+       " 'edad': 20,\n",
+       " 'profesion': 'arquitecto'}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,17 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "fe704c24-3652-4522-b1fc-c0c6fc64a8eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.cursor.Cursor at 0x7f57c935f310>"
+       "<pymongo.cursor.Cursor at 0x7f9d4fe63760>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "00c4928c-e8d7-4d37-b7ea-aff6832f457d",
    "metadata": {},
    "outputs": [
@@ -483,8 +483,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('63d19ba2012a78e817cc71a5'), 'nombre': 'Luis Vargas', 'edad': 36, 'profesion': 'enfermero'}\n",
-      "{'_id': ObjectId('63d19ba2012a78e817cc71a6'), 'nombre': 'Marcela Aranda', 'edad': 35, 'profesion': 'estudiante'}\n"
+      "{'_id': ObjectId('63d7dc531c11a75df15ed533'), 'nombre': 'Luis Vargas', 'edad': 36, 'profesion': 'enfermero'}\n",
+      "{'_id': ObjectId('63d7dc531c11a75df15ed534'), 'nombre': 'Marcela Aranda', 'edad': 35, 'profesion': 'estudiante'}\n"
      ]
     }
    ],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "962897a1-3395-4345-9d0e-dddffd698d28",
    "metadata": {},
    "outputs": [
@@ -505,14 +505,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('63d195a33eb3ce7e74439616'), 'nombre': 'José Pérez', 'edad': 20}\n",
-      "{'_id': ObjectId('63d1969e3eb3ce7e74439617'), 'nombre': 'José Pérez', 'edad': 20}\n",
-      "{'_id': ObjectId('63d196f13eb3ce7e74439618'), 'nombre': 'José Pérez', 'edad': 20}\n",
-      "{'_id': ObjectId('63d197063eb3ce7e74439619'), 'nombre': 'José Pérez', 'edad': 20}\n",
-      "{'_id': ObjectId('63d1973c3eb3ce7e7443961a'), 'nombre': 'José Pérez', 'edad': 20, 'profesion': 'arquitecto'}\n",
-      "{'_id': ObjectId('63d197ca3eb3ce7e7443961b'), 'nombre': 'Andrea Sanchez', 'edad': 30, 'profesion': 'deportista'}\n",
-      "{'_id': ObjectId('63d197ca3eb3ce7e7443961c'), 'nombre': 'Luis Vargas', 'edad': 36, 'profesion': 'enfermero'}\n",
-      "{'_id': ObjectId('63d197ca3eb3ce7e7443961d'), 'nombre': 'Marcela Aranda', 'edad': 35, 'profesion': 'estudiante'}\n"
+      "{'_id': ObjectId('63d7dc501c11a75df15ed531'), 'nombre': 'José Pérez', 'edad': 20, 'profesion': 'arquitecto'}\n",
+      "{'_id': ObjectId('63d7dc531c11a75df15ed532'), 'nombre': 'Andrea Sanchez', 'edad': 30, 'profesion': 'deportista'}\n",
+      "{'_id': ObjectId('63d7dc531c11a75df15ed533'), 'nombre': 'Luis Vargas', 'edad': 36, 'profesion': 'enfermero'}\n",
+      "{'_id': ObjectId('63d7dc531c11a75df15ed534'), 'nombre': 'Marcela Aranda', 'edad': 35, 'profesion': 'estudiante'}\n"
      ]
     }
    ],
@@ -520,14 +516,6 @@
     "for documento in col.find({}):\n",
     "    print(documento)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f2ca199-697c-420f-a821-58d3651e55ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
