--- a/Bases_de_datos/Cuadernos/PyMongo.ipynb
+++ b/Bases_de_datos/Cuadernos/PyMongo.ipynb
@@ -36,6 +36,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f8976d9-8704-4c73-932c-69f6359f1e74",
+   "metadata": {},
+   "source": [
+    ">```powershell\n",
+    "conda install -c conda-forge pymongo\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41f2c1a6-b194-44ab-9a0b-ebaa5181578d",
    "metadata": {},
    "source": [
@@ -416,7 +426,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "aa7d91cd-7050-4799-ac29-d0971bff991d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -434,6 +446,26 @@
    ],
    "source": [
     "col.find_one({})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffd18149-dfec-46e3-9d38-00eef38af65d",
+   "metadata": {},
+   "source": [
+    "Búsqueda por `_id`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61bb9346-2c81-45c3-8eca-88085347160f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bson.objectid import ObjectId\n",
+    "\n",
+    "col.find_one({'_id': ObjectId('63d7dc501c11a75df15ed531'})"
    ]
   },
   {
@@ -534,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
