--- a/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
+++ b/Bases_de_datos/Cuadernos/Consola_MongoDB.ipynb
@@ -223,7 +223,37 @@
    "metadata": {},
    "source": [
     "```powershell\n",
-    "mongoimport --db <base de datos> --collection <colección> --legacy <ruta del archivo .json>\n",
+    "mongoimport --db=<base de datos> --collection=<colección> --file=<ruta del archivo .json>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f7306b5-4d0b-4207-a4a9-fb5f2242dc52",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## <span style=\"color:#4361EE\">Exportar</span> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "006f370d-ed03-41c8-9b9b-1e13035f031d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### <span style=\"color:#4CC9F0\">Exportar documentos</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61120446-f94b-49c9-9e20-6d2eb8ddb9cf",
+   "metadata": {},
+   "source": [
+    "```powershell\n",
+    "mongoexport --db=<base_de_datos> --collection=<colección> --out=<nombre_archivo.json>\n",
     "```"
    ]
   },
@@ -2760,7 +2790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
